# mpc

./: README.md
backend/: Anchor.toml  FINAL_STATUS.md  FIXES_APPLIED.md  SUCCESS_SUMMARY.md  TESTING_GUIDE.md  package.json  savings_mxe_keypair.json
backend/encrypted-ixs/: Cargo.toml
backend/encrypted-ixs/src/: lib.rs
backend/programs/savings_goal/: Cargo.toml
backend/programs/savings_goal/src/: lib.rs
backend/programs/savings_mxe/: Cargo.toml
backend/programs/savings_mxe/src/: lib.rs  lib.rs.backup
backend/scripts/: clean_comp_defs.sh  fix_mxe_artifact.ts
backend/tests/: analyze_comp_def.ts  analyze_devnet_mxe.ts  check_accounts.ts  check_computation_account.ts  check_current_cluster.ts  check_discriminator.ts  compute_expected_cluster.ts  debug_instruction.ts  debug_pda.ts  debug_workspace.ts  e2e_error_log.txt  find_correct_mxe.ts  init_comp_defs.ts  init_comp_defs_simple.ts  init_mxe_keygen.ts  init_mxe_localnet.ts  manual_mpc_test.ts  mxe_e2e.ts  reverse_pda.ts  savings_mxe.ts  setup_localnet_mxe.ts  simple_localnet_test.ts  update_mxe_artifact.ts  verify_account_discriminators.ts  verify_v2_offsets.ts
frontend/: README.md
