[package]
name = "savings_goal"
version = "0.1.0"
description = "Privacy-preserving group savings program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "savings_goal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
